# FastApi

TodosApp/: pyproject.toml
TodosApp/todos/: main.py
TodosApp/todos/config/: db.py
TodosApp/todos/models/: todos.py
fastapi01/: README.md  pyproject.toml
fastapi01/todos/: main.py
studentassignment/: README.md  pyproject.toml
studentassignment/students/: main.py
